--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -67,6 +67,9 @@ input::placeholder, textarea::placeholder {
 .app-note__input textarea {
   height: 15rem;
 }
+.app-note__input input[type="submit"]{
+  cursor: pointer;
+}
 
 .app-note__display-body {
   gap: 1rem;
@@ -79,6 +82,7 @@ input::placeholder, textarea::placeholder {
   display: grid;
   row-gap: 1px;
   border-radius: 10px;
+  box-sizing: border-box;
   grid-template-rows: repeat(2, 1fr);
   border: 1px solid palevioletred;
 }
