--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,7 +32,7 @@ input::placeholder, textarea::placeholder {
   font-weight: bold;
 }
 
-.app-note__header {
+.note__header {
   display: grid;
   padding: 1rem;
   column-gap: 1rem;
@@ -57,50 +57,18 @@ input::placeholder, textarea::placeholder {
   background-color: greenyellow;
 }
 
-.app-note__input-body {
-  padding: 0 20rem;
-}
-.app-note__input {
-  display: flex;
-  flex-direction: column;
-}
-.app-note__input textarea {
-  height: 15rem;
-}
-.app-note__input input[type="submit"]{
-  cursor: pointer;
+.note-input {
+  width: auto;
+  padding: 2rem;
 }
 
-.app-note__display-body {
-  gap: 1rem;
+form {
   display: grid;
-  padding: 1rem;
+}
+
+.note-list {
+  display: grid;
+  padding: 2rem;
   grid-template-columns: repeat(3, 1fr);
 }
-.app-note__display-artikel {
-  padding: 10px;
-  display: grid;
-  row-gap: 1px;
-  border-radius: 10px;
-  box-sizing: border-box;
-  grid-template-rows: repeat(2, 1fr);
-  border: 1px solid palevioletred;
-}
-.app-note__display-artikel span {
-  color: gray;
-  font-size: smaller;
-}
-.app-note__btn-artikel {
-  display: grid;
-  column-gap: 5px;
-  text-align: center;
-  grid-template-columns: repeat(2, 1fr);
-}
-.app-note__btn-artikel button {
-  color: bisque;
-  height: 1.5rem;
-  cursor: pointer;
-  border-radius: 5px;
-  background-color: transparent;
-  border: 1px solid palevioletred;
-}
+
